[tool.poetry]
name = "backend-challenge"
version = "0.1.0"
description = ""
authors = ["Kelvin Silvestre <kelvinsc7@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = { version = "^0.113.0", extras = ["standard"] }
sqlalchemy = "^2.0.32"
uvicorn = "^0.30.6"
pydantic = "^2.8.2"
psycopg2-binary = "^2.9.9"
cryptography = "^43.0.0"
pika = "^1.3.2"
aio-pika = "^9.4.3"
faker = "^30.8.2"
pydantic-settings = "^2.6.1"

[tool.poetry.group.dev.dependencies]
ruff = "^0.6.9"
taskipy = "^1.14.0"

[tool.ruff]
line-length = 79
extend-exclude = ['__pycache__']

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']

[tool.ruff.format]
preview = true
quote-style = 'single'

[tool.pytest.ini_options]
pythonpath = "."
addopts = '-p no:warnings'

[tool.taskipy.tasks]
lint = 'ruff check . && ruff . --diff'
format = 'ruff check . --fix && ruff format'
mock = 'python apis/mock-data.py'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
